plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'org.springframework.boot' version '4.0.3' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.graalvm.buildtools.native' version '0.11.5' apply false
    id 'org.hibernate.orm' version '7.2.6.Final'
}

ext {
    // Spring/Spring Cloud 版本
    set('springBootVersion', '4.0.3')
    set('springCloudVersion', '2025.1.1')
    set('springCloudAlibabaVersion', '2025.1.0.0')
    set('springDependencyManagementVersion', '1.1.7')
    set('springModulithVersion', '2.0.5')

    // 数据库驱动版本
    set('mysqlConnectorVersion', '9.6.0')
    set('postgresqlVersion', '42.7.10')

    // 连接池版本
    set('druidVersion', '1.2.28')

    // Redis 版本
    set('redissonVersion', '4.3.0')

    // 工具类版本
    set('hutoolVersion', '5.8.43')
    set('guavaVersion', '33.5.0-jre')
    set('commonsLang3Version', '3.20.0')
    set('commonsCollections4Version', '4.5.0')
    set('commonsIoVersion', '2.21.0')
    set('uuidCreatorVersion', '6.1.1')
    set('caffeineVersion', '3.2.0')

    // 微信/第三方 SDK 版本
    set('wxJavaVersion', '4.6.0')
    set('aliyunSmsVersion', '3.0.0')

    // API 文档版本
    set('springdocVersion', '3.0.2')

    // RocketMQ
    set('rocketMqVersion', '2.3.5')

    // 对象存储
    set('minioVersion', '8.5.17')

    // 分布式定时任务
    set('xxlJobVersion', '2.4.2')

    // Seata 分布式事务
    set('seataVersion', '2.2.0')

    // MyBatis-Plus（Spring Boot 3/4 兼容）
    set('mybatisPlusVersion', '3.5.11')

    // 支付 SDK
    set('alipayVersion', '4.39.221.ALL')
    set('wechatpayVersion', '0.2.14')

    // 序列化
    set('fastjson2Version', '2.0.61')

    // Office 文档处理
    set('poiVersion', '5.3.0')

    // MapStruct
    set('mapstructVersion', '1.6.3')
    set('lombokMapstructVersion', '0.2.0')
}

allprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    group = 'com.eagle'
    version = '1.0.0'

    repositories {
        maven { url 'https://maven.aliyun.com/repository/public' }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.graalvm.buildtools.native'

    // 聚合模块和 starter 模块不应该是可执行应用
    if (project.name in ['eagle-base-server', 'eagle-starter'] ||
            project.path.contains(':eagle-starter:')) {
        bootJar {
            enabled = false
        }
        jar {
            enabled = true
        }
    }

    // 禁用 AOT 相关任务（避免 Gradle 9.x 并发问题和测试扫描问题）
    tasks.matching { it.name in ['processAot', 'processTestAot'] }.configureEach {
        enabled = false
    }

    hibernate {
        enhancement {
            enableAssociationManagement = true
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        // mockito-core 单独作为 JVM Agent 加载，避免 JDK 21+ 动态 Agent 加载警告
        mockitoAgent
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                groupId = 'com.eagle'
                version = '1.0.0-SNAPSHOT'
            }
        }
    }

    tasks.named('compileJava') {
        options.compilerArgs += [
                '-Amapstruct.defaultComponentModel=spring',
                '-Amapstruct.unmappedTargetPolicy=IGNORE',
                '-Xlint:all,-processing'
        ]
    }

    tasks.named('test') {
        useJUnitPlatform()
        // 将 mockito-core 作为 JVM Agent 显式加载，修复 JDK 21+ 动态 Agent 加载警告
        jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}"
        // 设置测试超时时间，防止测试卡住（5分钟）
        timeout.set(java.time.Duration.ofMinutes(5))
        // 显示测试执行信息
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
        }
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs += [
                "-XX:+AllowRedefinitionToAddDeleteMethods"
        ]
    }

    // Aliyun SMS SDK 等第三方库的传递依赖可能含重复 JAR
    tasks.withType(Jar).configureEach {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }

    // 禁用 GraalVM collectReachabilityMetadata，避免 Gradle 9.x 并发配置解析 bug
    tasks.matching { it.name == 'collectReachabilityMetadata' }.configureEach {
        enabled = false
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${springCloudAlibabaVersion}"
        }
        dependencies {
            // 数据库驱动
            dependency "com.mysql:mysql-connector-j:${mysqlConnectorVersion}"
            dependency "org.postgresql:postgresql:${postgresqlVersion}"

            // 连接池
            dependency "com.alibaba:druid-spring-boot-3-starter:${druidVersion}"

            // Redis
            dependency "org.redisson:redisson-spring-boot-starter:${redissonVersion}"

            // 工具类
            dependency "cn.hutool:hutool-all:${hutoolVersion}"
            dependency "com.google.guava:guava:${guavaVersion}"
            dependency "org.apache.commons:commons-lang3:${commonsLang3Version}"
            dependency "org.apache.commons:commons-collections4:${commonsCollections4Version}"
            dependency "commons-io:commons-io:${commonsIoVersion}"
            dependency "com.github.f4b6a3:uuid-creator:${uuidCreatorVersion}"
            dependency "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"

            // 微信/第三方 SDK
            dependency "com.github.binarywang:weixin-java-miniapp:${wxJavaVersion}"
            dependency "com.aliyun:dysmsapi20170525:${aliyunSmsVersion}"

            // API 文档
            dependency "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
            dependency "org.springdoc:springdoc-openapi-starter-webflux-ui:${springdocVersion}"

            // 序列化
            dependency "com.alibaba.fastjson2:fastjson2:${fastjson2Version}"

            // Office 文档处理
            dependency "org.apache.poi:poi-ooxml:${poiVersion}"

            // MapStruct
            dependency "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructVersion}"
            dependency "org.mapstruct:mapstruct:${mapstructVersion}"
            dependency "org.mapstruct:mapstruct-processor:${mapstructVersion}"

            // RocketMQ
            dependency "org.apache.rocketmq:rocketmq-spring-boot-starter:${rocketMqVersion}"
            dependency "org.apache.rocketmq:rocketmq-v5-client-spring-boot-starter:${rocketMqVersion}"

            // 对象存储
            dependency "io.minio:minio:${minioVersion}"

            // 分布式定时任务
            dependency "com.xuxueli:xxl-job-core:${xxlJobVersion}"

            // Seata 分布式事务
            dependency "org.apache.seata:seata-spring-boot-starter:${seataVersion}"

            // MyBatis-Plus
            dependency "com.baomidou:mybatis-plus-spring-boot3-starter:${mybatisPlusVersion}"

            // 支付 SDK
            dependency "com.alipay.sdk:alipay-sdk-java:${alipayVersion}"
            dependency "com.github.wechatpay-apiv3:wechatpay-java:${wechatpayVersion}"
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        compileOnly "org.mapstruct:mapstruct"
        annotationProcessor "org.mapstruct:mapstruct-processor"
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        // transitive = false：只取 mockito-core jar 本身，不引入传递依赖
        mockitoAgent('org.mockito:mockito-core') { transitive = false }
    }

    graalvmNative {
        binaries {
            main {
                javaLauncher = javaToolchains.launcherFor {
                    languageVersion = JavaLanguageVersion.of(25)
                    vendor = JvmVendorSpec.GRAAL_VM
                }
            }
        }
    }
}